# opengl-basics

./: .gitignore  4.6.shader.fs  4.6.shader.vs  CMakeLists.txt  Main.cpp  OpenGLTutorial.sln  OpenGLTutorial.vcxproj  OpenGLTutorial.vcxproj.filters  camera.h  glad.c  shader.h  shader_s.h  stb_image.cpp
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
OpenGLTutorial/x64/Debug/: OpenGLTutorial.exe.recipe  OpenGLTutorial.ilk  main.obj.enc  vc143.idb
OpenGLTutorial/x64/Debug/OpenGLTutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGLTutorial.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/shaders/: shader.frag
assets/shaders/2_colors/: colors.frag  colorsFS.glsl  colorsVS.glsl
assets/shaders/4_advanced-opengl/: advglsl.vert  advopengl.frag  blue.frag  default.vert  framebuffers_screen.frag  geometry_shader.geom  geometry_shader.vert  green.frag  instancing.frag  instancing.vert
assets/shaders/5_advanced-lighting/: advlighting.frag  gammacorrection.frag  normal_mapping.frag  point_shadows.frag  point_shadows.vert  point_shadows_depth.geom  shadow_mapping.frag
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Main.cpp
src/core/: Mesh.h  Model.h  Shader.h
